--- a/CV.qmd
+++ b/CV.qmd
@@ -13,12 +13,10 @@ github: shunekawaoto2003
 # orcid: 0000-0002-1825-0097
 #osf: ymqui # osf five character id
 #twitter: twitter # twitter handle
-web: quarto.org
+web: shunekawaoto.netlify.app
 fontawesome: yes
 nocite: '@*'
-bibliography_peer: peer_bib.bib
 validate-yaml: false
-csl: apa-cv.csl
 ---
 
 <!-- # Employment -->
@@ -30,21 +28,46 @@ csl: apa-cv.csl
 <!-- Researcher (Dublin) \hfill 1899-1935 -->
 
 # Education
-
-*University of California, Los Angeles*, B.S. Statistics and Data Science \hfill 2024
+*University of California, Los Angeles*, B.S. Statistics and Data Science \hfill 2021 - 2024
 
 # Work Experience
+- Statistical Consultant \hfill April 2024 - June 2024
+  - *UCLA*
+- University Apartment Mailroom Worker \hfill August 2023 - June 2024
+  - *UCLA Housing*
+- Bussing Supervisor \hfill September 2022 - July 2023
+  - *Ackerman Student Union*
+- Copy Editor \hfill September 2021 - June 2024
+  - *Pacific Ties Newsmagazine*
 
-<!-- # Publications -->
+# Coursework
+- STATS 20, Introduction to Statistical Programming with R
+- STATS 100A, Introduction to Probability
+- STATS 100B, Introduction to Mathematical Statistics
+- STATS 100C, Linear Models
+- STATS 101A, Introduction to Data Analysis and Regression
+- STATS 101B, Introduction to Design and Analysis of Experiment
+- STATS 101C, Introduction to Statistical Models and Data Mining
+- STATS 102A, Introduction to Computational Statistics with R
+- STATS 102B, Introduction to Computation and Optimization for Statistics
+- STATS 102C, Introduction to Monte Carlo Methods
+- STATS C173, Applied Geostatistics
+- STATS C155, Applied Sampling
+- COM SCI 31, Introduction to Computer Science I
+- COM SCI 32, Introduction to Computer Science II
+- MATH 115A, Linear Algebra
+- MATH 131A, Analysis
+- GEOG 7, Introduction to Geographic Information Systems
 
-<!-- ::: {#refs-peer} -->
-<!-- ::: -->
+# Projects
+- Predicting Electric Vehicle Prices
+  - Created a linear model to predict the price of EV vehicles based on their configurations such as top speed, 
+  mileage, charge speed, etc.
+- Predicting the Alcoholic Status of Individuals From Health Data
+  - Used machine learning models to impute and predict individuals' alcoholic statuses with a 73% predicting rate.
+- Analysis of Lighting Conditions Affecting Perception of Photos
+  - Used a random forest model to predict how different lighting conditions affects the perceptions of photos.
 
-# Technical Reports
+# Technical Experience
+C++, R, Python, SQL, Excel, Stata, GIS
 
-<!-- ::: {#refs-other} -->
-<!-- ::: -->
-
-<!-- # References -->
-
-<!-- Available upon request, though likely would include Karl Pearson and Ronald A. Fisher. -->
