--- a/CV.qmd
+++ b/CV.qmd
@@ -60,12 +60,12 @@ validate-yaml: false
 - GEOG 7 \hfill Introduction to Geographic Information Systems
 
 # Projects
-- **Predicting Electric Vehicle Prices**
+- **[Predicting Electric Vehicle Prices](https://github.com/shunekawaoto2003/Predicting-EV-Prices)**
   - Created a linear model to predict the price of EV vehicles based on their configurations such as top speed, 
   mileage, charge speed, etc.
-- **Predicting the Alcoholic Status of Individuals From Health Data**
+- **[Predicting the Alcoholic Status of Individuals From Health Data](https://github.com/shunekawaoto2003/Predicting-Alcoholic-Status)**
   - Used machine learning models to impute and predict individuals' alcoholic statuses with a 73% predicting rate.
-- **Analysis of Lighting Conditions Affecting Perception of Photos**
+- **[Analysis of Lighting Conditions Affecting Perception of Photos](https://github.com/shunekawaoto2003/Analysis-of-light-conditions)**
   - Used a random forest model to predict how different lighting conditions affects the perceptions of photos.
 
 # Technical Experience
